# rucksack

./: .gitignore  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  pyproject.toml  rucksack.yaml  rucksack.yml  rucksack_wip.py  sample_config_updated.yaml  setup.cfg  toolbag.py  toolbag.yaml  toolbag_wip.py
doc/: tutorial.md
rucksack/: cli.py  command_parser.py  completer.py  config_parser.py  connection.py  exceptions.py
test/: test_cli.py  test_command_parser.py  test_completer.py  test_config_parser.py  test_connection.py
toolbag/: command_parser.py  completer.py  config_parser.py  connection.py  exceptions.py
