[metadata]
name = rucksack
version = 0.0.1
author = Anthony Critelli
author_email = critellia@gmail.com
description = A flexible command line runner
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/acritelli/rucksack
project_urls =
    Bug Tracker = https://github.com/acritelli/rucksack/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
package_dir =
    = ./
packages = find:
python_requires = >=3.8
scripts =
    bin/ruck

[options.packages.find]
where = ./
